# testenervie

./: Dockerfile  README.md  data.csv  docker-compose.yaml  pyproject.toml
src/: import_csv.py
