[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Leandro Freitas", email = "vpc2112@gmail.com"},
]
dependencies = [
    "pandas>=1.4.3",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[tool]
[tool.pdm]
